@@ -1,0 +1,6 @@
+;<!-- $Id: upgrading.html,v 1.1.2.1 2010-08-26 19:00:51 dereine Exp $ -->
+
+<h3>Updating templates</h3>
+If you have theme files for node-view-$viewname of comment-view-$viewname you have
+to convert them to node--view--$viewname or comment--view--$viewname.
+
