@@ -1,4 +1,4 @@
-; $Id: views.help.ini,v 1.18.4.4 2010-07-19 09:18:42 dereine Exp $
+; $Id: views.help.ini,v 1.18.4.5 2010-08-26 19:00:51 dereine Exp $
 [advanced help settings]
 line break = TRUE
 
@@ -166,8 +166,8 @@ title = "Embedding a view into other parts of your site"
 title = "What's new in Views 2"
 weight = -42
 
-[updating]
-title = "Updating your views from Views 1 to Views 2"
+[upgrading]
+title = "Upgrading your Views from Drupal 6 to Drupal 7"
 
 ; API related
 [api]
@@ -195,7 +195,7 @@ weight = -40
 parent = api
 
 [api-upgrading]
-title = "Upgrading to Drupal 7"
+title = "Upgrading to Drupal 7 (API)"
 parent = api
 
 [api-example]
